--- a/src/sections/Experience.section.astro
+++ b/src/sections/Experience.section.astro
@@ -1,15 +1,15 @@
 ---
-import { ChevronDown } from "lucide"
-import LucideIcon from "@/components/LucideIcon.astro"
-import Section from "@/components/Section.astro"
-import TextAnim from "@/components/TextAnim.astro"
+import { ChevronDown } from 'lucide'
+import LucideIcon from '@/components/LucideIcon.astro'
+import Section from '@/components/Section.astro'
+import TextAnim from '@/components/TextAnim.astro'
 ---
 
 <Section
   id="experience"
   anim
-  frame="0 0 0"
-  fg="46 100 56"
+  frame="0 0% 0%"
+  fg="46 100% 56%"
   bg="0 0 0"
   class="xs:transition xs:duration-500 xs:opacity-0 flex flex-col justify-center"
 >
@@ -18,35 +18,20 @@ import TextAnim from "@/components/TextAnim.astro"
   >
     <TextAnim trigger h="5.5rem">Experience</TextAnim>
   </h2>
-  <details class="group">
-    <summary
-      class="flex flex-col sm:flex-row gap-x-6 md:gap-x-8 sm:items-end py-6 px-4 border-b hover:cursor-pointer"
-    >
-      <span class="font-mono block text-sm md:text-base">2024/now</span>
-      <div class="flex flex-col sm:flex-row flex-1 gap-x-4 sm:items-center">
-        <div class="flex gap-x-4 items-center">
-          <span class="text-xl md:text-2xl font-bold">IF7SPORTS</span>
-          <span>
-            <hr class="w-10" />
-          </span>
-        </div>
-        <div class="flex flex-1 gap-x-4 justify-between">
-          <span class="text-lg md:text-xl w-full">Full Stack Developer</span>
-          <LucideIcon
-            icon={ChevronDown}
-            class="size-8 duration-300 group-open:rotate-180"
-          />
-        </div>
+  <div
+    class="flex flex-col sm:flex-row gap-x-6 md:gap-x-8 sm:items-end py-6 px-4 border-b hover:cursor-pointer"
+  >
+    <span class="font-mono block text-sm md:text-base">2024/now</span>
+    <div class="flex flex-col sm:flex-row flex-1 gap-x-4 sm:items-center">
+      <div class="flex gap-x-4 items-center">
+        <span class="text-xl md:text-2xl font-bold">IF7SPORTS</span>
+        <span>
+          <hr class="w-10" />
+        </span>
       </div>
-    </summary>
-    <p class="mt-6 px-4 md:text-lg max-w-screen-lg">
-      Full time developer. Working on the development of the Dashboard, the App
-      and the Web. Development of internal tools: script to generate an endpoint
-      for the API, script to fill the development database... Implementing new
-      technologies: migration from the Web to <strong>Astro</strong> with
-      <strong>Preact</strong>. Learning technologies: <strong>Docker</strong>, <strong
-        >Nest</strong
-      >, <strong>SEO</strong>...
-    </p>
-  </details>
+      <div class="flex flex-1 gap-x-4 justify-between">
+        <span class="text-lg md:text-xl w-full">Full Stack Developer</span>
+      </div>
+    </div>
+  </div>
 </Section>
