--- a/src/sections/TechSkills.section.astro
+++ b/src/sections/TechSkills.section.astro
@@ -146,9 +146,9 @@ const stack = [...backend, ...frontend, ...devops]
 <Section
   id="tech-skills"
   anim
-  frame="0 0 100"
-  fg="0 0 100"
-  bg="0 0 0"
+  frame="0 0% 100%"
+  fg="0 0% 100%"
+  bg="0 0% 0%"
   class="xs:transition-all xs:duration-500 xs:opacity-0 uppercase flex flex-col"
 >
   <h1
