--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,58 +31,49 @@ p {
 }
 
 @font-face {
-  font-family: "Eudoxus Sans";
+  font-family: 'Eudoxus Sans';
   font-display: swap;
-  src: url("/fonts/EudoxusSans-Regular.woff2") format("woff2");
+  src: url('/fonts/EudoxusSans-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Eudoxus Sans";
+  font-family: 'Eudoxus Sans';
   font-display: swap;
-  src: url("/fonts/EudoxusSans-Bold.woff2") format("woff2");
+  src: url('/fonts/EudoxusSans-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Eudoxus Sans";
+  font-family: 'Eudoxus Sans';
   font-display: swap;
-  src: url("/fonts/EudoxusSans-ExtraBold.woff2") format("woff2");
+  src: url('/fonts/EudoxusSans-ExtraBold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Modern Era Mono";
+  font-family: 'Modern Era Mono';
   font-display: swap;
-  src: url("/fonts/ModernEraMono-Medium.woff2") format("woff2");
+  src: url('/fonts/ModernEraMono-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Modern Era Mono";
+  font-family: 'Modern Era Mono';
   font-display: swap;
-  src: url("/fonts/ModernEraMono-ExtraBold.woff2") format("woff2");
+  src: url('/fonts/ModernEraMono-ExtraBold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Nevrada Neue";
+  font-family: 'Nevrada Neue';
   font-display: swap;
-  src: local("/fonts/NevradaNeue.otf") format("opentype");
-  src: url("/fonts/NevradaNeue.woff2") format("woff2");
+  src: url('/fonts/NevradaNeue.woff2') format('woff2');
   font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto Flex";
-  font-display: swap;
-  src: url("/fonts/RobotoFlex-Variable.ttf") format("truetype");
-  src: url("/fonts/RobotoFlex-Variable.woff2") format("woff2");
   font-style: normal;
 }
