--- a/src/sections/Experience.section.astro
+++ b/src/sections/Experience.section.astro
@@ -19,7 +19,7 @@ import TextAnim from '@/components/TextAnim.astro'
     <TextAnim trigger h="5.5rem">Experience</TextAnim>
   </h2>
   <div
-    class="flex flex-col sm:flex-row gap-x-6 md:gap-x-8 sm:items-end py-6 px-4 border-b hover:cursor-pointer"
+    class="flex flex-col sm:flex-row gap-x-6 md:gap-x-8 sm:items-end py-6 px-4 border-b"
   >
     <span class="font-mono block text-sm md:text-base">2024/now</span>
     <div class="flex flex-col sm:flex-row flex-1 gap-x-4 sm:items-center">
