--- a/src/svgs/Angular.svg.astro
+++ b/src/svgs/Angular.svg.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-interface Props extends HTMLAttributes<"svg"> {}
+import type { HTMLAttributes } from 'astro/types'
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -10,48 +10,40 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
->
-  <g clip-path="url(#clip0_207_385)">
-    <mask
-      id="mask0_207_385"
+  ><g clip-path="url(#a)"
+    ><mask
+      id="b"
       style="mask-type:luminance"
       maskUnits="userSpaceOnUse"
       x="0"
       y="0"
       width="49"
       height="50"
-    >
-      <path d="M0.867188 0H48.1328V50H0.867188V0Z" fill="currentColor"></path>
-    </mask>
-    <g mask="url(#mask0_207_385)">
-      <mask
-        id="mask1_207_385"
+      ><path d="M.867 0h47.266v50H.867V0Z" fill="currentColor"></path></mask
+    ><g mask="url(#b)"
+      ><mask
+        id="c"
         style="mask-type:luminance"
         maskUnits="userSpaceOnUse"
         x="0"
         y="0"
         width="49"
         height="50"
-      >
-        <path d="M0.867188 0H48.1328V50H0.867188V0Z" fill="currentColor"></path>
-      </mask>
-      <g mask="url(#mask1_207_385)">
-        <path
-          d="M47.9375 8.39844L46.1797 34.9609L29.9688 0L47.9375 8.39844ZM36.6094 42.7734L24.5 49.8047L12.1953 42.7734L14.5391 36.7188H34.2656L36.6094 42.7734ZM24.5 13.2812L30.75 28.9062H18.0547L24.5 13.2812ZM2.625 34.9609L0.867188 8.39844L18.8359 0L2.625 34.9609Z"
-          fill="currentColor"></path>
-        <path
-          d="M47.9375 8.39844L46.1797 34.9609L29.9688 0L47.9375 8.39844ZM36.6094 42.7734L24.5 49.8047L12.1953 42.7734L14.5391 36.7188H34.2656L36.6094 42.7734ZM24.5 13.2812L30.75 28.9062H18.0547L24.5 13.2812ZM2.625 34.9609L0.867188 8.39844L18.8359 0L2.625 34.9609Z"
-          fill="currentColor"></path>
-      </g>
-    </g>
-  </g>
-  <defs>
-    <clipPath id="clip0_207_385">
-      <rect
-        width="47.2656"
-        height="50"
+        ><path d="M.867 0h47.266v50H.867V0Z" fill="currentColor"></path></mask
+      ><g mask="url(#c)" fill="currentColor"
+        ><path
+          d="M47.938 8.398 46.18 34.961 29.969 0l17.968 8.398ZM36.608 42.773 24.5 49.805l-12.305-7.032 2.344-6.054h19.727l2.343 6.054ZM24.5 13.281l6.25 15.625H18.055L24.5 13.281ZM2.625 34.961.867 8.398 18.836 0 2.625 34.96Z"
+        ></path><path
+          d="M47.938 8.398 46.18 34.961 29.969 0l17.968 8.398ZM36.608 42.773 24.5 49.805l-12.305-7.032 2.344-6.054h19.727l2.343 6.054ZM24.5 13.281l6.25 15.625H18.055L24.5 13.281ZM2.625 34.961.867 8.398 18.836 0 2.625 34.96Z"
+        ></path></g
+      ></g
+    ></g
+  ><defs
+    ><clipPath id="a"
+      ><path
         fill="currentColor"
-        transform="translate(0.867188)"></rect>
-    </clipPath>
-  </defs>
-</svg>
+        transform="translate(.867)"
+        d="M0 0h47.266v50H0z"></path></clipPath
+    ></defs
+  ></svg
+>
