--- a/src/svgs/Menu.svg.astro
+++ b/src/svgs/Menu.svg.astro
@@ -1,7 +1,7 @@
 ---
-import type { HTMLAttributes } from "astro/types"
+import type { HTMLAttributes } from 'astro/types'
 
-interface Props extends HTMLAttributes<"svg"> {}
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -11,17 +11,10 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
+  ><path
+    d="M4 12h16M4 6h16"
+    stroke="currentColor"
+    stroke-width="2"
+    stroke-linecap="round"
+    stroke-linejoin="round"></path></svg
 >
-  <path
-    d="M4 12H20"
-    stroke="currentColor"
-    stroke-width="2"
-    stroke-linecap="round"
-    stroke-linejoin="round"></path>
-  <path
-    d="M4 6H20"
-    stroke="currentColor"
-    stroke-width="2"
-    stroke-linecap="round"
-    stroke-linejoin="round"></path>
-</svg>
