--- a/src/svgs/MongoDB.svg.astro
+++ b/src/svgs/MongoDB.svg.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-interface Props extends HTMLAttributes<"svg"> {}
+import type { HTMLAttributes } from 'astro/types'
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -10,19 +10,16 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
->
-  <g clip-path="url(#clip0_207_241)">
-    <path
-      d="M16.8373 5.56537C14.7416 3.07894 12.937 0.553534 12.5683 0.0291257C12.5596 0.0199223 12.549 0.012595 12.5373 0.00758834C12.5257 0.00258166 12.5131 0 12.5004 0C12.4877 0 12.4751 0.00258166 12.4634 0.00758834C12.4517 0.012595 12.4412 0.0199223 12.4324 0.0291257C12.0638 0.553625 10.2591 3.07894 8.1634 5.56537C-9.82449 28.5067 10.9965 43.9889 10.9965 43.9889L11.1711 44.1054C11.3263 46.4947 11.7145 49.9331 11.7145 49.9331H13.2669C13.2669 49.9331 13.6548 46.5142 13.8101 44.1055L13.9848 43.9695C14.0042 43.989 34.8252 28.5068 16.8373 5.56537ZM12.4906 43.6391C12.4906 43.6391 11.5592 42.8428 11.3069 42.435V42.396L12.4324 17.4149C12.4324 17.3372 12.5489 17.3372 12.5489 17.4149L13.6743 42.396V42.435C13.4221 42.8428 12.4906 43.6392 12.4906 43.6392V43.6391Z"
-      fill="currentColor"></path>
-  </g>
-  <defs>
-    <clipPath id="clip0_207_241">
-      <rect
-        width="23.3151"
-        height="50"
+  ><g clip-path="url(#a)"
+    ><path
+      d="M16.837 5.565A88.608 88.608 0 0 1 12.568.03a.093.093 0 0 0-.105-.021.094.094 0 0 0-.03.021 88.538 88.538 0 0 1-4.27 5.536C-9.824 28.507 10.996 43.99 10.996 43.99l.175.116c.155 2.39.543 5.828.543 5.828h1.553s.388-3.419.543-5.828l.175-.136c.02.02 20.84-15.462 2.852-38.404ZM12.491 43.64s-.932-.796-1.184-1.204v-.039l1.125-24.981c0-.078.117-.078.117 0l1.125 24.981v.039c-.252.408-1.183 1.204-1.183 1.204Z"
+      fill="currentColor"></path></g
+  ><defs
+    ><clipPath id="a"
+      ><path
         fill="currentColor"
-        transform="translate(0.842529)"></rect>
-    </clipPath>
-  </defs>
-</svg>
+        transform="translate(.843)"
+        d="M0 0h23.315v50H0z"></path></clipPath
+    ></defs
+  ></svg
+>
