--- a/src/svgs/Vercel.svg.astro
+++ b/src/svgs/Vercel.svg.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-interface Props extends HTMLAttributes<"svg"> {}
+import type { HTMLAttributes } from 'astro/types'
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -10,17 +10,14 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
->
-  <g clip-path="url(#clip0_207_416)">
-    <path d="M29.5 0L58.3288 49.9336H0.671143L29.5 0Z" fill="currentColor"></path>
-  </g>
-  <defs>
-    <clipPath id="clip0_207_416">
-      <rect
-        width="57.6577"
-        height="50"
+  ><g clip-path="url(#a)"
+    ><path d="m29.5 0 28.829 49.934H.67L29.5 0Z" fill="currentColor"></path></g
+  ><defs
+    ><clipPath id="a"
+      ><path
         fill="currentColor"
-        transform="translate(0.671143)"></rect>
-    </clipPath>
-  </defs>
-</svg>
+        transform="translate(.671)"
+        d="M0 0h57.658v50H0z"></path></clipPath
+    ></defs
+  ></svg
+>
