--- a/src/svgs/Figma.svg.astro
+++ b/src/svgs/Figma.svg.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-interface Props extends HTMLAttributes<"svg"> {}
+import type { HTMLAttributes } from 'astro/types'
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -10,40 +10,28 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
->
-  <g clip-path="url(#clip0_211_2)">
-    <mask
-      id="mask0_211_2"
+  ><g clip-path="url(#a)"
+    ><mask
+      id="b"
       style="mask-type:luminance"
       maskUnits="userSpaceOnUse"
       x="0"
       y="0"
       width="34"
       height="50"
-    >
-      <path d="M33.3333 0H0V50H33.3333V0Z" fill="currentColor"></path>
-    </mask>
-    <g mask="url(#mask0_211_2)">
-      <path
-        d="M8.33331 50.0002C12.9333 50.0002 16.6667 46.2668 16.6667 41.6668V33.3335H8.33331C3.73333 33.3335 0 37.0668 0 41.6668C0 46.2668 3.73333 50.0002 8.33331 50.0002Z"
-        fill="currentColor"></path>
-      <path
-        d="M0 24.9998C0 20.3998 3.73333 16.6665 8.33331 16.6665H16.6667V33.3332H8.33331C3.73333 33.3332 0 29.5998 0 24.9998Z"
-        fill="currentColor"></path>
-      <path
-        d="M0 8.33331C0 3.73333 3.73333 0 8.33331 0H16.6667V16.6667H8.33331C3.73333 16.6667 0 12.9333 0 8.33331Z"
-        fill="currentColor"></path>
-      <path
-        d="M16.6667 0H25.0001C29.6001 0 33.3334 3.73333 33.3334 8.33331C33.3334 12.9333 29.6001 16.6667 25.0001 16.6667H16.6667V0Z"
-        fill="currentColor"></path>
-      <path
-        d="M33.3334 24.9998C33.3334 29.5998 29.6001 33.3332 25.0001 33.3332C20.4001 33.3332 16.6667 29.5998 16.6667 24.9998C16.6667 20.3998 20.4001 16.6665 25.0001 16.6665C29.6001 16.6665 33.3334 20.3998 33.3334 24.9998Z"
-        fill="currentColor"></path>
-    </g>
-  </g>
-  <defs>
-    <clipPath id="clip0_211_2">
-      <rect width="33.75" height="50" fill="currentColor"></rect>
-    </clipPath>
-  </defs>
-</svg>
+      ><path d="M33.333 0H0v50h33.333V0Z" fill="currentColor"></path></mask
+    ><g mask="url(#b)" fill="currentColor"
+      ><path
+        d="M8.333 50c4.6 0 8.334-3.733 8.334-8.333v-8.334H8.333A8.336 8.336 0 0 0 0 41.668C0 46.267 3.733 50 8.333 50ZM0 25c0-4.6 3.733-8.334 8.333-8.334h8.334v16.667H8.333A8.336 8.336 0 0 1 0 25Z"
+      ></path><path
+        d="M0 8.333C0 3.733 3.733 0 8.333 0h8.334v16.667H8.333A8.336 8.336 0 0 1 0 8.333ZM16.667 0H25c4.6 0 8.333 3.733 8.333 8.333S29.6 16.667 25 16.667h-8.333V0Z"
+      ></path><path
+        d="M33.333 25c0 4.6-3.733 8.333-8.333 8.333A8.336 8.336 0 0 1 16.667 25c0-4.6 3.733-8.334 8.333-8.334S33.333 20.4 33.333 25Z"
+      ></path></g
+    ></g
+  ><defs
+    ><clipPath id="a"
+      ><path fill="currentColor" d="M0 0h33.75v50H0z"></path></clipPath
+    ></defs
+  ></svg
+>
