--- a/src/svgs/Firebase.svg.astro
+++ b/src/svgs/Firebase.svg.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-interface Props extends HTMLAttributes<"svg"> {}
+import type { HTMLAttributes } from 'astro/types'
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -10,110 +10,85 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
->
-  <g clip-path="url(#clip0_207_405)">
-    <path
-      d="M0.266357 40.3131L0.568779 39.8897L14.8713 12.751L14.9015 12.4637L8.59684 0.620777C8.06835 -0.371246 6.58117 -0.120391 6.40795 0.99015L0.266357 40.3131Z"
-      fill="currentColor"></path>
-    <path
-      d="M0.444824 39.9902L0.673457 39.5442L14.8263 12.6898L8.53713 0.798769C8.01448 -0.182855 6.68713 0.0674302 6.51562 1.16629L0.444824 39.9902Z"
-      fill="currentColor"></path>
-    <g filter="url(#filter0_i_207_405)">
-      <path
-        d="M0.444824 39.9902L0.673457 39.5442L14.8263 12.6898L8.53713 0.798769C8.01448 -0.182855 6.68713 0.0674302 6.51562 1.16629L0.444824 39.9902Z"
-        fill="currentColor"></path>
-    </g>
-    <path
-      d="M19.4979 21.4217L24.1924 16.614L19.4965 7.6496C19.0508 6.80103 17.8062 6.79846 17.3652 7.6496L14.8562 12.4341V12.8415L19.4978 21.4217H19.4979Z"
-      fill="currentColor"></path>
-    <path
-      d="M19.4141 21.2214L23.9781 16.5473L19.4141 7.85688C18.9808 7.03195 17.928 6.94548 17.4992 7.77283L14.9771 12.6317L14.9016 12.8801L19.4141 21.2214V21.2214Z"
-      fill="currentColor"></path>
-    <g filter="url(#filter1_i_207_405)">
-      <path
-        d="M19.4141 21.2214L23.9781 16.5473L19.4141 7.85688C18.9808 7.03195 17.928 6.94548 17.4992 7.77283L14.9771 12.6317L14.9016 12.8801L19.4141 21.2214V21.2214Z"
-        fill="currentColor"></path>
-    </g>
-    <path
-      d="M0.266357 40.3132L0.403394 40.1753L0.9014 39.973L19.203 21.7394L19.4349 21.1082L14.8693 12.4082L0.266357 40.3132Z"
-      fill="currentColor"></path>
-    <path
-      d="M20.0842 49.5086L36.6476 40.2712L31.9176 11.1408C31.7696 10.2294 30.6515 9.86919 29.9991 10.5226L0.266357 40.3131L16.7347 49.5079C17.2466 49.7937 17.8231 49.9438 18.4094 49.9439C18.9956 49.9441 19.5722 49.7942 20.0842 49.5086Z"
-      fill="currentColor"></path>
-    <path
-      d="M36.4992 40.1937L31.8052 11.2846C31.6585 10.3801 30.7285 10.0058 30.0811 10.6544L0.450195 40.2564L16.7378 49.3601C17.2458 49.6437 17.8179 49.7927 18.3997 49.7929C18.9815 49.793 19.5536 49.6443 20.0617 49.361L36.4993 40.1936L36.4992 40.1937Z"
-      fill="currentColor"></path>
-    <path
-      d="M20.0841 49.2365C19.5721 49.5221 18.9956 49.6719 18.4094 49.6718C17.8232 49.6717 17.2467 49.5216 16.7348 49.2358L0.39908 40.1732L0.266602 40.3132L16.7348 49.5081C17.2467 49.7938 17.8232 49.9439 18.4095 49.9441C18.9957 49.9442 19.5723 49.7943 20.0843 49.5088L36.6477 40.2713L36.6071 40.0217L20.0843 49.2367L20.0841 49.2365Z"
-      fill="currentColor"></path>
-  </g>
-  <defs>
-    <filter
-      id="filter0_i_207_405"
-      x="0.444824"
-      y="0.185303"
-      width="14.3816"
-      height="39.8049"
+  ><g clip-path="url(#a)"
+    ><path
+      d="m.266 40.313.303-.423L14.87 12.75l.03-.287L8.598.62C8.068-.371 6.58-.12 6.408.99L.266 40.312Z"
+      fill="currentColor"></path><path
+      d="m.445 39.99.228-.446L14.826 12.69 8.537.799c-.523-.982-1.85-.732-2.021.367L.445 39.99Z"
+      fill="currentColor"></path><g filter="url(#b)"
+      ><path
+        d="m.445 39.99.228-.446L14.826 12.69 8.537.799c-.523-.982-1.85-.732-2.021.367L.445 39.99Z"
+        fill="currentColor"></path></g
+    ><path
+      d="m19.498 21.422 4.694-4.808-4.695-8.964c-.446-.849-1.69-.852-2.132 0l-2.509 4.784v.408l4.642 8.58Z"
+      fill="currentColor"></path><path
+      d="m19.414 21.221 4.564-4.674-4.564-8.69c-.433-.825-1.486-.912-1.915-.084l-2.522 4.859-.075.248 4.512 8.341Z"
+      fill="currentColor"></path><g filter="url(#c)"
+      ><path
+        d="m19.414 21.221 4.564-4.674-4.564-8.69c-.433-.825-1.486-.912-1.915-.084l-2.522 4.859-.075.248 4.512 8.341Z"
+        fill="currentColor"></path></g
+    ><path
+      d="m.266 40.313.137-.138.498-.202 18.302-18.234.232-.63-4.566-8.7L.266 40.312Z"
+      fill="currentColor"></path><path
+      d="m20.084 49.509 16.564-9.238-4.73-29.13a1.132 1.132 0 0 0-1.919-.618L.266 40.313l16.469 9.195a3.437 3.437 0 0 0 3.35 0Z"
+      fill="currentColor"></path><path
+      d="m36.5 40.194-4.695-28.91c-.146-.904-1.076-1.278-1.724-.63L.451 40.256l16.287 9.104a3.412 3.412 0 0 0 3.324.001l16.437-9.167Z"
+      fill="currentColor"></path><path
+      d="M20.084 49.236a3.436 3.436 0 0 1-3.35 0L.4 40.173l-.132.14 16.468 9.195a3.439 3.439 0 0 0 3.35 0l16.563-9.237-.04-.25-16.524 9.216Z"
+      fill="currentColor"></path></g
+  ><defs
+    ><filter
+      id="b"
+      x=".445"
+      y=".185"
+      width="14.382"
+      height="39.805"
       filterUnits="userSpaceOnUse"
       color-interpolation-filters="sRGB"
-    >
-      <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
-      <feBlend
-        mode="normal"
+      ><feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood><feBlend
         in="SourceGraphic"
         in2="BackgroundImageFix"
-        result="shape"></feBlend>
-      <feColorMatrix
+        result="shape"></feBlend><feColorMatrix
         in="SourceAlpha"
-        type="matrix"
         values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-        result="hardAlpha"></feColorMatrix>
-      <feOffset></feOffset>
-      <feGaussianBlur stdDeviation="17.5"></feGaussianBlur>
-      <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"
-      ></feComposite>
-      <feColorMatrix
-        type="matrix"
-        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.06 0"></feColorMatrix>
-      <feBlend mode="normal" in2="shape" result="effect1_innerShadow_207_405"
-      ></feBlend>
-    </filter>
-    <filter
-      id="filter1_i_207_405"
-      x="14.9016"
-      y="0.193604"
-      width="10.0764"
-      height="21.0278"
+        result="hardAlpha"></feColorMatrix><feOffset></feOffset><feGaussianBlur
+        stdDeviation="17.5"></feGaussianBlur><feComposite
+        in2="hardAlpha"
+        operator="arithmetic"
+        k2="-1"
+        k3="1"></feComposite><feColorMatrix
+        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.06 0"
+      ></feColorMatrix><feBlend in2="shape" result="effect1_innerShadow_207_405"
+      ></feBlend></filter
+    ><filter
+      id="c"
+      x="14.902"
+      y=".194"
+      width="10.076"
+      height="21.028"
       filterUnits="userSpaceOnUse"
       color-interpolation-filters="sRGB"
-    >
-      <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
-      <feBlend
-        mode="normal"
+      ><feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood><feBlend
         in="SourceGraphic"
         in2="BackgroundImageFix"
-        result="shape"></feBlend>
-      <feColorMatrix
+        result="shape"></feBlend><feColorMatrix
         in="SourceAlpha"
-        type="matrix"
         values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-        result="hardAlpha"></feColorMatrix>
-      <feOffset dx="1" dy="-9"></feOffset>
-      <feGaussianBlur stdDeviation="3.5"></feGaussianBlur>
-      <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"
-      ></feComposite>
-      <feColorMatrix
-        type="matrix"
-        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.09 0"></feColorMatrix>
-      <feBlend mode="normal" in2="shape" result="effect1_innerShadow_207_405"
-      ></feBlend>
-    </filter>
-    <clipPath id="clip0_207_405">
-      <rect
-        width="36.4672"
-        height="50"
+        result="hardAlpha"></feColorMatrix><feOffset dx="1" dy="-9"
+      ></feOffset><feGaussianBlur stdDeviation="3.5"
+      ></feGaussianBlur><feComposite
+        in2="hardAlpha"
+        operator="arithmetic"
+        k2="-1"
+        k3="1"></feComposite><feColorMatrix
+        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.09 0"
+      ></feColorMatrix><feBlend in2="shape" result="effect1_innerShadow_207_405"
+      ></feBlend></filter
+    ><clipPath id="a"
+      ><path
         fill="currentColor"
-        transform="translate(0.266357)"></rect>
-    </clipPath>
-  </defs>
-</svg>
+        transform="translate(.266)"
+        d="M0 0h36.467v50H0z"></path></clipPath
+    ></defs
+  ></svg
+>
