--- a/src/svgs/Mongoose.svg.astro
+++ b/src/svgs/Mongoose.svg.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-interface Props extends HTMLAttributes<"svg"> {}
+import type { HTMLAttributes } from 'astro/types'
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -10,9 +10,8 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
->
-  <path
-    d="M3.38627 20.0732C3.38647 16.0081 10.7032 3.81301 22.0853 3.81301C35.9064 3.813 35.9066 15.1951 35.9066 17.6341M3.38627 20.0732C3.38609 23.7317 3.38627 3 3.38627 3M3.38627 20.0732V53M35.9066 53C35.9066 53 35.9066 31.4454 35.9066 17.6341M67.6139 53C67.6139 53 67.6139 33.3504 67.6139 17.6341C67.6139 12.3496 65.9879 3.81301 53.7927 3.81301C42.4106 3.81301 36.3131 13.9756 35.9066 17.6341"
+  ><path
+    d="M3.386 20.073c0-4.065 7.317-16.26 18.7-16.26 13.82 0 13.82 11.382 13.82 13.821m-32.52 2.44V3m0 17.073V53m32.52 0V17.634M67.615 53V17.634c0-5.284-1.626-13.821-13.821-13.821-11.382 0-17.48 10.163-17.886 13.821"
     stroke="currentColor"
-    stroke-width="6"></path>
-</svg>
+    stroke-width="6"></path></svg
+>
