--- a/src/svgs/Node.svg.astro
+++ b/src/svgs/Node.svg.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-interface Props extends HTMLAttributes<"svg"> {}
+import type { HTMLAttributes } from 'astro/types'
+interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
@@ -10,55 +10,46 @@ interface Props extends HTMLAttributes<"svg"> {}
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
   {...Astro.props}
->
-  <g clip-path="url(#clip0_207_129)">
-    <path
-      d="M23.6855 0.313497C22.9417 -0.104825 22.0585 -0.104825 21.3146 0.313497L1.74443 11.6096C1.0006 12.0279 0.582275 12.8181 0.582275 13.6548V36.2931C0.582275 37.1299 1.04717 37.9202 1.74443 38.3385L21.3146 49.6344C22.0585 50.0529 22.9417 50.0529 23.6855 49.6344L43.2557 38.3385C43.9996 37.9202 44.4179 37.1299 44.4179 36.2931V13.6548C44.4179 12.8181 43.953 12.0279 43.2557 11.6096L23.6855 0.313497Z"
-      fill="currentColor"></path>
-    <mask
-      id="mask0_207_129"
+  ><g clip-path="url(#a)"
+    ><path
+      d="M23.686.313a2.396 2.396 0 0 0-2.371 0L1.745 11.61C1 12.028.581 12.818.581 13.655v22.638c0 .837.465 1.627 1.162 2.046l19.57 11.295a2.396 2.396 0 0 0 2.372 0l19.57-11.295c.744-.419 1.162-1.21 1.162-2.046V13.655c0-.837-.465-1.627-1.162-2.045L23.686.313Z"
+      fill="currentColor"></path><mask
+      id="b"
       style="mask-type:luminance"
       maskUnits="userSpaceOnUse"
       x="0"
       y="-1"
       width="45"
       height="51"
-    >
-      <path
-        d="M23.6855 0.313253C22.9417 -0.105069 22.0585 -0.105069 21.3146 0.313253L1.74443 11.6093C1.0006 12.0276 0.582275 12.8179 0.582275 13.6545V36.2929C0.582275 37.1297 1.04717 37.9199 1.74443 38.3383L21.3146 49.6341C22.0585 50.0526 22.9417 50.0526 23.6855 49.6341L43.2557 38.3383C43.9996 37.9199 44.4179 37.1297 44.4179 36.2929V13.6545C44.4179 12.8179 43.953 12.0276 43.2557 11.6093L23.6855 0.313253Z"
-        fill="currentColor"></path>
-    </mask>
-    <g mask="url(#mask0_207_129)">
-      <path
-        d="M43.3022 11.6095L23.6387 0.313784C23.4527 0.220976 23.2204 0.127996 23.0344 0.0814209L1.00049 37.8273C1.18645 38.0597 1.41898 38.2456 1.65117 38.3852L21.3145 49.6811C21.8724 50.0064 22.5233 50.0994 23.1275 49.9134L43.8133 12.0744C43.6738 11.8884 43.488 11.7491 43.302 11.6097L43.3022 11.6095Z"
-        fill="currentColor"></path>
-    </g>
-    <mask
-      id="mask1_207_129"
+      ><path
+        d="M23.686.313a2.396 2.396 0 0 0-2.371 0L1.745 11.61C1 12.028.581 12.818.581 13.655v22.638c0 .837.465 1.627 1.162 2.045l19.57 11.296a2.396 2.396 0 0 0 2.372 0l19.57-11.296c.744-.418 1.162-1.208 1.162-2.045V13.654c0-.836-.465-1.626-1.162-2.045L23.686.313Z"
+        fill="currentColor"></path></mask
+    ><g mask="url(#b)"
+      ><path
+        d="M43.302 11.61 23.64.314a3.245 3.245 0 0 0-.605-.233L1 37.827c.186.233.419.419.651.558l19.663 11.296c.558.325 1.21.418 1.814.232l20.685-37.839c-.14-.186-.325-.325-.511-.464Z"
+        fill="currentColor"></path></g
+    ><mask
+      id="c"
       style="mask-type:luminance"
       maskUnits="userSpaceOnUse"
       x="0"
       y="-1"
       width="45"
       height="51"
-    >
-      <path
-        d="M23.6855 0.313253C22.9417 -0.105069 22.0585 -0.105069 21.3146 0.313253L1.74443 11.6093C1.0006 12.0276 0.582275 12.8179 0.582275 13.6545V36.2929C0.582275 37.1297 1.04717 37.9199 1.74443 38.3383L21.3146 49.6341C22.0585 50.0526 22.9417 50.0526 23.6855 49.6341L43.2557 38.3383C43.9996 37.9199 44.4179 37.1297 44.4179 36.2929V13.6545C44.4179 12.8179 43.953 12.0276 43.2557 11.6093L23.6855 0.313253Z"
-        fill="currentColor"></path>
-    </mask>
-    <g mask="url(#mask1_207_129)">
-      <path
-        d="M43.3486 38.3385C43.9065 38.0132 44.3248 37.4553 44.5107 36.851L22.9416 0.0347544C22.3837 -0.0582251 21.7794 -0.011821 21.2681 0.313522L1.74414 11.5632L22.8022 49.9601C23.081 49.9135 23.4065 49.8205 23.6854 49.681L43.3486 38.3385Z"
-        fill="currentColor"></path>
-    </g>
-  </g>
-  <defs>
-    <clipPath id="clip0_207_129">
-      <rect
-        width="43.8356"
-        height="50"
+      ><path
+        d="M23.686.313a2.396 2.396 0 0 0-2.371 0L1.745 11.61C1 12.028.581 12.818.581 13.655v22.638c0 .837.465 1.627 1.162 2.045l19.57 11.296a2.396 2.396 0 0 0 2.372 0l19.57-11.296c.744-.418 1.162-1.208 1.162-2.045V13.654c0-.836-.465-1.626-1.162-2.045L23.686.313Z"
+        fill="currentColor"></path></mask
+    ><g mask="url(#c)"
+      ><path
+        d="M43.349 38.339a2.642 2.642 0 0 0 1.162-1.488L22.94.035c-.557-.093-1.162-.047-1.673.279L1.744 11.564 22.802 49.96c.279-.047.605-.14.883-.279L43.35 38.339Z"
+        fill="currentColor"></path></g
+    ></g
+  ><defs
+    ><clipPath id="a"
+      ><path
         fill="currentColor"
-        transform="translate(0.582275)"></rect>
-    </clipPath>
-  </defs>
-</svg>
+        transform="translate(.582)"
+        d="M0 0h43.836v50H0z"></path></clipPath
+    ></defs
+  ></svg
+>
