fixed: svg incompleted & webkit colors

--- a/src/svgs/HTML.svg.astro
+++ b/src/svgs/HTML.svg.astro
@@ -4,24 +4,27 @@ interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
-  width="45"
-  height="50"
-  viewBox="0 0 45 50"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
-  {...Astro.props}
-  ><g clip-path="url(#a)"
-    ><path
-      fill-rule="evenodd"
-      clip-rule="evenodd"
-      d="M4.712 44.23.769 0h43.366l-3.943 44.23-17.788 5-17.692-5ZM22.5 20h-7.211l-.481-5.577h20.769l.48-5.385H8.847l1.443 16.443h18.846L28.46 32.5 22.5 34.135 16.346 32.5l-.384-4.327h-5.385l.673 8.558 11.25 3.077 11.058-3.077L35.096 20H22.5Z"
-      fill="currentColor"></path></g
-  ><defs
-    ><clipPath id="a"
-      ><path
-        fill="currentColor"
-        transform="translate(.77)"
-        d="M0 0h43.462v50H0z"></path></clipPath
-    ></defs
-  ></svg
+    width="45"
+    height="50"
+    viewBox="0 0 45 50"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    {...Astro.props}
+>
+    <g clip-path="url(#clip0_207_370)">
+        <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M4.71159 44.2308L0.769287 0H44.1347L40.1924 44.2308L22.4039 49.2308L4.71159 44.2308ZM22.5 20H15.2885L14.8077 14.4231H22.5H22.5H35.5769L36.0577 9.03845H22.5H22.5H8.84619L10.2885 25.4808H22.5H22.5H29.1346L28.4615 32.5L22.5 34.1346H22.5L16.3462 32.5L15.9616 28.1731H10.577L11.25 36.7308L22.5 39.8077H22.5L33.5577 36.7308L35.0962 20H22.5H22.5Z"
+            fill="currentColor"></path>
+    </g>
+    <defs>
+        <clipPath id="clip0_207_370">
+            <rect
+                width="43.4615"
+                height="50"
+                fill="currentColor"
+                transform="translate(0.769287)"></rect>
+        </clipPath>
+    </defs></svg
 >
