--- a/src/svgs/TailwindCSS.svg.astro
+++ b/src/svgs/TailwindCSS.svg.astro
@@ -4,22 +4,25 @@ interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
-  width="85"
-  height="50"
-  viewBox="0 0 85 50"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
-  {...Astro.props}
-  ><g clip-path="url(#a)"
-    ><path
-      d="M42.5 0C31.418 0 24.491 5.541 21.72 16.623c4.157-5.54 9.005-7.619 14.546-6.233 3.162.79 5.421 3.084 7.923 5.622 4.074 4.136 8.79 8.923 19.09 8.923 11.083 0 18.01-5.541 20.78-16.623-4.156 5.54-9.005 7.619-14.546 6.234-3.161-.79-5.421-3.085-7.922-5.623C57.516 4.787 52.8 0 42.5 0ZM21.72 24.935c-11.081 0-18.008 5.541-20.778 16.623 4.155-5.54 9.004-7.619 14.545-6.233 3.161.79 5.421 3.084 7.923 5.622 4.074 4.136 8.79 8.923 19.09 8.923 11.082 0 18.009-5.541 20.78-16.623-4.157 5.541-9.005 7.619-14.546 6.233-3.162-.79-5.421-3.084-7.922-5.622-4.075-4.136-8.79-8.923-19.091-8.923Z"
-      fill="currentColor"></path></g
-  ><defs
-    ><clipPath id="a"
-      ><path
-        fill="currentColor"
-        transform="translate(.942)"
-        d="M0 0h83.117v50H0z"></path></clipPath
-    ></defs
-  ></svg
+    width="85"
+    height="50"
+    viewBox="0 0 85 50"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    {...Astro.props}
+>
+    <g clip-path="url(#clip0_207_380)">
+        <path
+            d="M42.5001 0C31.4179 0 24.4913 5.54123 21.7209 16.6234C25.8767 11.0821 30.7251 9.00422 36.2663 10.3896C39.4277 11.1799 41.6874 13.4737 44.1887 16.0123C48.2634 20.1484 52.979 24.9351 63.2793 24.9351C74.3615 24.9351 81.2881 19.3938 84.0585 8.31169C79.9027 13.8529 75.0543 15.9308 69.5131 14.5455C66.3517 13.7552 64.092 11.4614 61.5907 8.92273C57.516 4.78669 52.8004 0 42.5001 0ZM21.7209 24.9351C10.6387 24.9351 3.7121 30.4763 0.94165 41.5584C5.09749 36.0172 9.94587 33.9393 15.4871 35.3247C18.6485 36.1149 20.9082 38.4088 23.4095 40.9474C27.4842 45.0834 32.1998 49.8701 42.5001 49.8701C53.5822 49.8701 60.5089 44.3289 63.2793 33.2468C59.1235 38.788 54.2751 40.8659 48.7339 39.4805C45.5725 38.6903 43.3128 36.3964 40.8115 33.8578C36.7368 29.7218 32.0212 24.9351 21.7209 24.9351Z"
+            fill="currentColor"></path>
+    </g>
+    <defs>
+        <clipPath id="clip0_207_380">
+            <rect
+                width="83.1169"
+                height="50"
+                fill="currentColor"
+                transform="translate(0.94165)"></rect>
+        </clipPath>
+    </defs></svg
 >
