--- a/src/svgs/Vercel.svg.astro
+++ b/src/svgs/Vercel.svg.astro
@@ -4,20 +4,23 @@ interface Props extends HTMLAttributes<'svg'> {}
 ---
 
 <svg
-  width="59"
-  height="50"
-  viewBox="0 0 59 50"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
-  {...Astro.props}
-  ><g clip-path="url(#a)"
-    ><path d="m29.5 0 28.829 49.934H.67L29.5 0Z" fill="currentColor"></path></g
-  ><defs
-    ><clipPath id="a"
-      ><path
-        fill="currentColor"
-        transform="translate(.671)"
-        d="M0 0h57.658v50H0z"></path></clipPath
-    ></defs
-  ></svg
+    width="59"
+    height="50"
+    viewBox="0 0 59 50"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    {...Astro.props}
+>
+    <g clip-path="url(#clip0_207_416)">
+        <path d="M29.5 0L58.3288 49.9336H0.671143L29.5 0Z" fill="currentColor"></path>
+    </g>
+    <defs>
+        <clipPath id="clip0_207_416">
+            <rect
+                width="57.6577"
+                height="50"
+                fill="currentColor"
+                transform="translate(0.671143)"></rect>
+        </clipPath>
+    </defs></svg
 >
